--- a/Нейронные_сети_и_описание_портрета_убийцы.ipynb
+++ b/Нейронные_сети_и_описание_портрета_убийцы.ipynb
@@ -59,7 +59,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('data_diplom.csv', )\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/Magillan17/Junior-ML-Contest/main/data_diplom.csv.csv', )\n",
         "display(df.head())\n"
       ],
       "metadata": {
